crates/vvv/tests/corpus/snapshots/rust__rename-missing__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 1
--- stdout ---
--- stderr ---
✗ no symbol named `Nope`
hint: declarations are matched by exact name; `vvv search --name Nope` shows what exists
