crates/vvv/tests/corpus/snapshots/rust__rename-missing__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "self.run(args, true)"
---
exit 1
--- stdout ---
{
  "code": "no_such_symbol",
  "hint": "declarations are matched by exact name; `vvv search --name Nope` shows what exists",
  "message": "no symbol named `Nope`",
  "schema": 1,
  "status": "error"
}
--- stderr ---
